[package]
name = "hello-glsl"
version = "0.1.0"
authors = ["Josef Vlach"]
edition = "2021"
description = "Hello GLSL"
repository = ""
license = ""
homepage = "https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/By_example/Hello_GLSL"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false